src/gen/DSLParser.java
// Generated from C:/Users/hamza/OneDrive/Desktop/finalcomp2/compiler/src\DSLParser.g4 by ANTLR 4.10.1
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PAGE_WORD=1, CONTROLLER_WORD=2, COMMENT=3, SEA_WS=4, PAGE_OPEN=5, HEADER=6, 
		BODY=7, OPEN_BREAKET=8, PAGE_CLOSE=9, PAGE_COMMENT=10, NAME=11, PAGE_WHITESPACE=12, 
		INPUT=13, TWO_POINT=14, CLOSED_BREAKET=15, CONTENT_WHITESPACE=16, TYPE_NAME=17, 
		OPEN_BR=18, ATTRIBUTE=19, GET=20, COMA=21, CLOSE_BR=22, SIMICOLON=23, 
		STRING=24, TYPE_SEA=25, TYPE_DIGIT=26, CONTROL=27, CONTROLLER_OPEN=28, 
		CONTROLLER_NAME=29, CONTROLLER_WHITESPACE=30, POST=31, SINGLE=32, LIST=33, 
		IF=34, FOR=35, VAR=36, LIST_ADD=37, LIST_DELETE=38, LIST_SIZE=39, LIST_GET=40, 
		SESSION=41, DOT=42, FUNCTION=43, PRINT=44, RETURN=45, DART=46, LOGIC_COMMENT=47, 
		LOGIC_NAME=48, CONTROLLER_CLOSE=49, ASSIGNMENT=50, OPERAND=51, LOGICAL=52, 
		BOOLEN=53, LOGIC_SIMICOLON=54, LOGIC_COMMA=55, LOGIC_OPEN=56, LOGIC_CLOSE=57, 
		LOGIC_BR_OPEN=58, LOGIC_BR_COLSE=59, LOGIC_STRING=60, LOGIC_DIGIT=61, 
		LOGIC_WHITESPACE=62;
	public static final int
		RULE_program = 0, RULE_program_design = 1, RULE_page = 2, RULE_header = 3, 
		RULE_attribute_header = 4, RULE_body = 5, RULE_in_out = 6, RULE_attribute = 7, 
		RULE_get_data = 8, RULE_controller = 9, RULE_logic = 10, RULE_session = 11, 
		RULE_if = 12, RULE_compare = 13, RULE_post = 14, RULE_var = 15, RULE_variables = 16, 
		RULE_list = 17, RULE_assignment = 18, RULE_for = 19, RULE_call_function = 20, 
		RULE_function = 21, RULE_parameter = 22, RULE_print = 23, RULE_logic_body = 24, 
		RULE_type = 25, RULE_list_use = 26, RULE_list_add = 27, RULE_list_delete = 28, 
		RULE_list_size = 29, RULE_list_get = 30, RULE_lang_Misc = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "program_design", "page", "header", "attribute_header", "body", 
			"in_out", "attribute", "get_data", "controller", "logic", "session", 
			"if", "compare", "post", "var", "variables", "list", "assignment", "for", 
			"call_function", "function", "parameter", "print", "logic_body", "type", 
			"list_use", "list_add", "list_delete", "list_size", "list_get", "lang_Misc"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'page'", "'controller'", null, null, null, "'header'", "'body'", 
			null, null, null, null, null, null, "':'", null, null, null, null, null, 
			null, null, null, null, null, null, null, "'control'", null, null, null, 
			"'post'", "'''", "'list'", "'if'", "'for'", "'var'", "'add'", "'delete'", 
			"'size'", "'get'", "'session'", "'.'", "'function'", "'print'", "'return'", 
			"'->'", null, null, null, "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PAGE_WORD", "CONTROLLER_WORD", "COMMENT", "SEA_WS", "PAGE_OPEN", 
			"HEADER", "BODY", "OPEN_BREAKET", "PAGE_CLOSE", "PAGE_COMMENT", "NAME", 
			"PAGE_WHITESPACE", "INPUT", "TWO_POINT", "CLOSED_BREAKET", "CONTENT_WHITESPACE", 
			"TYPE_NAME", "OPEN_BR", "ATTRIBUTE", "GET", "COMA", "CLOSE_BR", "SIMICOLON", 
			"STRING", "TYPE_SEA", "TYPE_DIGIT", "CONTROL", "CONTROLLER_OPEN", "CONTROLLER_NAME", 
			"CONTROLLER_WHITESPACE", "POST", "SINGLE", "LIST", "IF", "FOR", "VAR", 
			"LIST_ADD", "LIST_DELETE", "LIST_SIZE", "LIST_GET", "SESSION", "DOT", 
			"FUNCTION", "PRINT", "RETURN", "DART", "LOGIC_COMMENT", "LOGIC_NAME", 
			"CONTROLLER_CLOSE", "ASSIGNMENT", "OPERAND", "LOGICAL", "BOOLEN", "LOGIC_SIMICOLON", 
			"LOGIC_COMMA", "LOGIC_OPEN", "LOGIC_CLOSE", "LOGIC_BR_OPEN", "LOGIC_BR_COLSE", 
			"LOGIC_STRING", "LOGIC_DIGIT", "LOGIC_WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DSLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<Lang_MiscContext> lang_Misc() {
			return getRuleContexts(Lang_MiscContext.class);
		}
		public Lang_MiscContext lang_Misc(int i) {
			return getRuleContext(Lang_MiscContext.class,i);
		}
		public List<Program_designContext> program_design() {
			return getRuleContexts(Program_designContext.class);
		}
		public Program_designContext program_design(int i) {
			return getRuleContext(Program_designContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSLParserVisitor ) return ((DSLParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT || _la==SEA_WS) {
				{
				{
				setState(64);
				lang_Misc();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PAGE_WORD) {
				{
				{
				setState(70);
				program_design();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Program_designContext extends ParserRuleContext {
		public PageContext page() {
			return getRuleContext(PageContext.class,0);
		}
		public ControllerContext controller() {
			return getRuleContext(ControllerContext.class,0);
		}
		public List<Lang_MiscContext> lang_Misc() {
			return getRuleContexts(Lang_MiscContext.class);
		}
		public Lang_MiscContext lang_Misc(int i) {
			return getRuleContext(Lang_MiscContext.class,i);
		}
		public Program_designContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program_design; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).enterProgram_design(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).exitProgram_design(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSLParserVisitor ) return ((DSLParserVisitor<? extends T>)visitor).visitProgram_design(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Program_designContext program_design() throws RecognitionException {
		Program_designContext _localctx = new Program_designContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program_design);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			page();
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT || _la==SEA_WS) {
				{
				{
				setState(77);
				lang_Misc();
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83);
			controller();
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT || _la==SEA_WS) {
				{
				{
				setState(84);
				lang_Misc();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PageContext extends ParserRuleContext {
		public TerminalNode PAGE_WORD() { return getToken(DSLParser.PAGE_WORD, 0); }
		public TerminalNode NAME() { return getToken(DSLParser.NAME, 0); }
		public TerminalNode PAGE_OPEN() { return getToken(DSLParser.PAGE_OPEN, 0); }
		public TerminalNode PAGE_CLOSE() { return getToken(DSLParser.PAGE_CLOSE, 0); }
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public PageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_page; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).enterPage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).exitPage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSLParserVisitor ) return ((DSLParserVisitor<? extends T>)visitor).visitPage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PageContext page() throws RecognitionException {
		PageContext _localctx = new PageContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_page);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(PAGE_WORD);
			setState(91);
			match(NAME);
			setState(92);
			match(PAGE_OPEN);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HEADER) {
				{
				setState(93);
				header();
				setState(94);
				body();
				}
			}

			setState(98);
			match(PAGE_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode HEADER() { return getToken(DSLParser.HEADER, 0); }
		public TerminalNode OPEN_BREAKET() { return getToken(DSLParser.OPEN_BREAKET, 0); }
		public TerminalNode CLOSED_BREAKET() { return getToken(DSLParser.CLOSED_BREAKET, 0); }
		public List<Attribute_headerContext> attribute_header() {
			return getRuleContexts(Attribute_headerContext.class);
		}
		public Attribute_headerContext attribute_header(int i) {
			return getRuleContext(Attribute_headerContext.class,i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSLParserVisitor ) return ((DSLParserVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(HEADER);
			setState(101);
			match(OPEN_BREAKET);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INPUT) {
				{
				{
				setState(102);
				attribute_header();
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(108);
			match(CLOSED_BREAKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attribute_headerContext extends ParserRuleContext {
		public TerminalNode INPUT() { return getToken(DSLParser.INPUT, 0); }
		public TerminalNode TWO_POINT() { return getToken(DSLParser.TWO_POINT, 0); }
		public TerminalNode STRING() { return getToken(DSLParser.STRING, 0); }
		public TerminalNode SIMICOLON() { return getToken(DSLParser.SIMICOLON, 0); }
		public Attribute_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).enterAttribute_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).exitAttribute_header(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSLParserVisitor ) return ((DSLParserVisitor<? extends T>)visitor).visitAttribute_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attribute_headerContext attribute_header() throws RecognitionException {
		Attribute_headerContext _localctx = new Attribute_headerContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_attribute_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(INPUT);
			setState(111);
			match(TWO_POINT);
			setState(112);
			match(STRING);
			setState(113);
			match(SIMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BodyContext extends ParserRuleContext {
		public TerminalNode BODY() { return getToken(DSLParser.BODY, 0); }
		public TerminalNode OPEN_BREAKET() { return getToken(DSLParser.OPEN_BREAKET, 0); }
		public TerminalNode CLOSED_BREAKET() { return getToken(DSLParser.CLOSED_BREAKET, 0); }
		public List<In_outContext> in_out() {
			return getRuleContexts(In_outContext.class);
		}
		public In_outContext in_out(int i) {
			return getRuleContext(In_outContext.class,i);
		}
		public BodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).enterBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).exitBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSLParserVisitor ) return ((DSLParserVisitor<? extends T>)visitor).visitBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BodyContext body() throws RecognitionException {
		BodyContext _localctx = new BodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(BODY);
			setState(116);
			match(OPEN_BREAKET);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INPUT) {
				{
				{
				setState(117);
				in_out();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			match(CLOSED_BREAKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class In_outContext extends ParserRuleContext {
		public TerminalNode INPUT() { return getToken(DSLParser.INPUT, 0); }
		public TerminalNode TWO_POINT() { return getToken(DSLParser.TWO_POINT, 0); }
		public TerminalNode TYPE_NAME() { return getToken(DSLParser.TYPE_NAME, 0); }
		public TerminalNode OPEN_BR() { return getToken(DSLParser.OPEN_BR, 0); }
		public TerminalNode CLOSE_BR() { return getToken(DSLParser.CLOSE_BR, 0); }
		public TerminalNode SIMICOLON() { return getToken(DSLParser.SIMICOLON, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public List<Get_dataContext> get_data() {
			return getRuleContexts(Get_dataContext.class);
		}
		public Get_dataContext get_data(int i) {
			return getRuleContext(Get_dataContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(DSLParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(DSLParser.COMA, i);
		}
		public In_outContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_in_out; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).enterIn_out(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).exitIn_out(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSLParserVisitor ) return ((DSLParserVisitor<? extends T>)visitor).visitIn_out(this);
			else return visitor.visitChildren(this);
		}
	}

	public final In_outContext in_out() throws RecognitionException {
		In_outContext _localctx = new In_outContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_in_out);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(INPUT);
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TWO_POINT) {
				{
				setState(126);
				match(TWO_POINT);
				setState(127);
				match(TYPE_NAME);
				setState(128);
				match(OPEN_BR);
				{
				setState(131);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
				case 1:
					{
					setState(129);
					attribute();
					}
					break;
				case 2:
					{
					setState(130);
					get_data();
					}
					break;
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(133);
					match(COMA);
					setState(136);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						setState(134);
						attribute();
						}
						break;
					case 2:
						{
						setState(135);
						get_data();
						}
						break;
					}
					}
					}
					setState(142);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				setState(143);
				match(CLOSE_BR);
				setState(144);
				match(SIMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public TerminalNode ATTRIBUTE() { return getToken(DSLParser.ATTRIBUTE, 0); }
		public TerminalNode OPEN_BR() { return getToken(DSLParser.OPEN_BR, 0); }
		public TerminalNode CLOSE_BR() { return getToken(DSLParser.CLOSE_BR, 0); }
		public List<TerminalNode> STRING() { return getTokens(DSLParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(DSLParser.STRING, i);
		}
		public TerminalNode TYPE_DIGIT() { return getToken(DSLParser.TYPE_DIGIT, 0); }
		public List<TerminalNode> COMA() { return getTokens(DSLParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(DSLParser.COMA, i);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).exitAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSLParserVisitor ) return ((DSLParserVisitor<? extends T>)visitor).visitAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeContext attribute() throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_attribute);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(ATTRIBUTE);
			setState(149);
			match(OPEN_BR);
			setState(159);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				{
				setState(150);
				match(STRING);
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(151);
					match(COMA);
					setState(152);
					match(STRING);
					}
					}
					setState(157);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case TYPE_DIGIT:
				{
				setState(158);
				match(TYPE_DIGIT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(161);
			match(CLOSE_BR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Get_dataContext extends ParserRuleContext {
		public TerminalNode ATTRIBUTE() { return getToken(DSLParser.ATTRIBUTE, 0); }
		public List<TerminalNode> OPEN_BR() { return getTokens(DSLParser.OPEN_BR); }
		public TerminalNode OPEN_BR(int i) {
			return getToken(DSLParser.OPEN_BR, i);
		}
		public TerminalNode GET() { return getToken(DSLParser.GET, 0); }
		public TerminalNode STRING() { return getToken(DSLParser.STRING, 0); }
		public List<TerminalNode> CLOSE_BR() { return getTokens(DSLParser.CLOSE_BR); }
		public TerminalNode CLOSE_BR(int i) {
			return getToken(DSLParser.CLOSE_BR, i);
		}
		public Get_dataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_get_data; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).enterGet_data(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DSLParserListener ) ((DSLParserListener)listener).exitGet_data(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DSLParserVisitor ) return ((DSLParserVisitor<? extends T>)visitor).visitGet_data(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Get_dataContext get_data() throws RecognitionException {
		Get_dataContext _localctx = new Get_dataContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_get_data);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(ATTRIBUTE);
			setState(164);
			match(OPEN_BR);
			setState(165);
			match(GET);
			setState(166);
			match(OPEN_BR);
			setState(167);
			match(STRING);
			setState(168);
			match(CLOSE_BR);
			setState(169);
			match(CLOSE_BR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
